heimdall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: heimdall
  name: heimdall
    #annotations:
    #kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hogwart
    http:
      paths:
       - path: /
         backend:
           service:
            name: heimdall
            port:
              number: 31441
